<resources>
    <string name="app_name">Animes</string>
    <string name="title_translate">Translate</string>
    <string name="title_scale">Scale</string>
    <string name="title_alpha">Alpha</string>
    <string name="title_rotate">Rotate</string>
    <string name="dummy_text">Animation Will Be Applied on this text</string>
    <string name="title_animator_set_xml">Animation Set XML</string>
    <string name="title_animation_set_code">Animation Set Code</string>
    <string name="title_view_property_animation">View Property Animation</string>
    <string name="title_property_values_holder">Property Values Holder</string>
    <string name="title_animating_drawables">Animating Drawables</string>
    <string name="title_animate">Animate</string>
    <string name="title_start_stop">Start/Stop</string>
    <string name="title_animated_vector_drawable">Animated Vector Drawable</string>
</resources>
